--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
       <div class="collapse navbar-collapse" id="main">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link p-2 p-lg-3 active" aria-current="page" href="#">Home</a>
+            <a class="nav-link p-2 p-lg-3 active" aria-current="page" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-2 p-lg-3" href="#">Services</a>
+            <a class="nav-link p-2 p-lg-3" href="#Services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-2 p-lg-3" href="#">Portfolio</a>
+            <a class="nav-link p-2 p-lg-3" href="#Portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-2 p-lg-3" href="#">About</a>
+            <a class="nav-link p-2 p-lg-3" href="#About">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-2 p-lg-3" href="#">Contact</a>
+            <a class="nav-link p-2 p-lg-3" href="#Contact">Contact</a>
           </li>
         </ul>
         <div class="search ps-3 pe-3 d-none d-lg-block">
@@ -57,16 +57,18 @@
       </div>
     </div>
   </nav>
-  <div class="landing d-flex justify-content-center align-items-center">
+  <!-- end navbar -->
+  <!-- start landing -->
+  <div id="home" class="landing d-flex justify-content-center align-items-center">
     <div class="text-center text-light">
       <h1>Taste the Creativity</h1>
       <p>We make awesome graphic and web design</p>
       <a href="#" class="btn rounded-pill main-btn">get started</a>
     </div>
   </div>
-  <!-- end navbar -->
+  <!-- end landing -->
   <!-- start features -->
-  <div class="features text-center pt-5 pb-5">
+  <div id="Services" class="features text-center pt-5 pb-5">
     <div class="container">
       <div class="main-title mt-5 mb-5 position-relative">
         <img class="mb-4" src="imgs/title.png" alt="" />
@@ -118,7 +120,7 @@
   </div>
   <!-- end features -->
   <!-- start our work -->
-  <div class="our-work text-center pt-5 pb-5">
+  <div id="Portfolio" class="our-work text-center pt-5 pb-5">
       <div class="container">
         <div class="main-title mt-5 mb-5 position-relative">
           <img class="mb-4" src="imgs/title.png" alt="" />
@@ -181,7 +183,7 @@
     </div>
   <!-- end our work -->
   <!-- start stuff -->
-  <div class="stuff pt-5">
+  <div id="About" class="stuff pt-5">
     <div class="container">
       <div class="main-title text-center mt-5 mb-5 position-relative">
         <img class="mb-4" src="imgs/title.png" alt="" />
@@ -345,7 +347,7 @@
   </div>
   <!-- end blog -->
   <!-- start subscribe -->
-  <div class="subscribe pt-5 pb-5 text-center text-md-start">
+  <div id="Contact" class="subscribe pt-5 pb-5 text-center text-md-start">
     <div class="container">
       <form class="row align-items-center">
         <div class="col-md-6 col-lg-3">
@@ -439,5 +441,6 @@
   <!-- js files -->
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/all.min.js"></script>
+  <script src="js/bondi.js"></script>
 </body>
 </html>
